--- a/css/styles.css
+++ b/css/styles.css
@@ -10,13 +10,9 @@
 body {
     height: 100vh;
     width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 canvas {
-    height: 95%;
-    aspect-ratio: 1;
-    border: 1px solid black;
+    width: 100%;
+    height: 100%;
 }
